fixed submit button alignment when shrinking the window

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1757,14 +1757,14 @@
 				.actions {
 					margin-left: auto;
 					margin-right: auto;
-					max-width: 20em;
+					max-width: 15em;
 					width: 100%;
 				}
 			}
 
 			@include breakpoint('<=small') {
 				.actions {
-					max-width: none;
+					max-width: 50%;
 				}
 			}
 		}
